// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.004449,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.995551,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.025879,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.974121,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.047306,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.952694,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.068729,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.931271,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.090171,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.909829,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.111593,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.888407,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.133038,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.866962,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.15444,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.84556,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.175896,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.824104,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.197304,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.802696,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.21876,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.78124,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.24016,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.75984,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.261569,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.738431,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.283019,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.716981,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.304465,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.695535,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.325866,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.674134,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.347293,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.652707,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.368727,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.631273,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.001488,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.998512,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.002976,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.997024,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.004464,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.995536,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.005952,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.994048,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.00744,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.99256,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.008929,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.991071,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.010417,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.989583,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.011905,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.988095,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.013393,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.986607,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.014881,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.985119,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.016369,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.983631,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.017857,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.982143,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.019345,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.980655,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.020833,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.979167,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.022321,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.977679,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.02381,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.97619,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.025298,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.974702,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.026786,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.973214,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 19`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 20`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 21`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 22`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 23`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 24`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 25`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 26`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 27`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 28`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 29`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 30`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 19`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 20`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 21`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 22`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 23`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 24`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 25`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 26`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 27`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 28`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 29`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 30`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;
